[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/PressStart_Res/Pixel_font_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/Templates/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Scenes/Menu/Settings/Audio.gd" type="Script" id=3]


[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0235294, 0.0235294, 0.0235294, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.105882, 0.105882, 0.105882, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )

[node name="Audio" type="MarginContainer"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 62.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
music_text_path = NodePath("Container/Music/Buttons/MusicVolume")
effects_text_path = NodePath("Container/Effects/Buttons/EffectsVolume")

[node name="Container" type="VBoxContainer" parent="."]
light_mask = 0
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 968.0
custom_constants/separation = 60

[node name="Music" type="VBoxContainer" parent="Container"]
light_mask = 0
margin_right = 1820.0
margin_bottom = 429.0
size_flags_vertical = 3
custom_constants/separation = 25

[node name="Volume" type="Label" parent="Container/Music"]
light_mask = 0
margin_right = 1820.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "MUSIC_VOLUME"
align = 1
valign = 1

[node name="Buttons" type="HBoxContainer" parent="Container/Music"]
light_mask = 0
margin_top = 227.0
margin_right = 1820.0
margin_bottom = 429.0
size_flags_vertical = 3
custom_constants/separation = 50

[node name="ResetMusic" parent="Container/Music/Buttons" instance=ExtResource( 2 )]
margin_right = 285.0
margin_bottom = 202.0
rect_min_size = Vector2( 285, 80 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "RESET"

[node name="M-" parent="Container/Music/Buttons" instance=ExtResource( 2 )]
margin_left = 335.0
margin_right = 415.0
margin_bottom = 202.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "-"

[node name="MusicVolume" type="Label" parent="Container/Music/Buttons"]
light_mask = 0
margin_left = 465.0
margin_top = 89.0
margin_right = 1690.0
margin_bottom = 113.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "100%"
align = 1

[node name="M+" parent="Container/Music/Buttons" instance=ExtResource( 2 )]
margin_left = 1740.0
margin_right = 1820.0
margin_bottom = 202.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "+"

[node name="Effects" type="VBoxContainer" parent="Container"]
light_mask = 0
margin_top = 489.0
margin_right = 1820.0
margin_bottom = 918.0
size_flags_vertical = 3
custom_constants/separation = 25

[node name="EffectsVolume" type="Label" parent="Container/Effects"]
light_mask = 0
margin_right = 1820.0
margin_bottom = 202.0
size_flags_vertical = 7
text = "EFFECTS_VOLUME"
align = 1
valign = 1

[node name="Buttons" type="HBoxContainer" parent="Container/Effects"]
light_mask = 0
margin_top = 227.0
margin_right = 1820.0
margin_bottom = 429.0
size_flags_vertical = 3
custom_constants/separation = 50

[node name="ResetEffects" parent="Container/Effects/Buttons" instance=ExtResource( 2 )]
margin_right = 285.0
margin_bottom = 202.0
rect_min_size = Vector2( 285, 80 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "RESET"

[node name="E-" parent="Container/Effects/Buttons" instance=ExtResource( 2 )]
margin_left = 335.0
margin_right = 415.0
margin_bottom = 202.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "-"

[node name="EffectsVolume" type="Label" parent="Container/Effects/Buttons"]
light_mask = 0
margin_left = 465.0
margin_top = 89.0
margin_right = 1690.0
margin_bottom = 113.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "78%"
align = 1

[node name="E+" parent="Container/Effects/Buttons" instance=ExtResource( 2 )]
margin_left = 1740.0
margin_right = 1820.0
margin_bottom = 202.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "+"
[connection signal="pressed" from="Container/Music/Buttons/ResetMusic" to="." method="reset_music_volume"]
[connection signal="pressed" from="Container/Music/Buttons/M-" to="." method="change_music_vol" binds= [ -5 ]]
[connection signal="pressed" from="Container/Music/Buttons/M+" to="." method="change_music_vol" binds= [ 5 ]]
[connection signal="pressed" from="Container/Effects/Buttons/ResetEffects" to="." method="reset_effect_volume"]
[connection signal="pressed" from="Container/Effects/Buttons/E-" to="." method="change_effect_vol" binds= [ -5 ]]
[connection signal="pressed" from="Container/Effects/Buttons/E+" to="." method="change_effect_vol" binds= [ 5 ]]
